# practice

./: .gitignore  meson.build  practice.c  sorting.c
c/: meson.build  practice.c
c/include/search/: algorithms.h
c/include/sort/: algorithms.h
c/include/structures/heap/: algorithms.h  heap.h
include/: sorting.h
include/search/: searching.h
include/sort/: algorithms.h  sorting.h
include/structures/heap/: algorithms.h  heap.h
